--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,16 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoDisplay">
         <service
+            android:name=".reportPing"
+            android:enabled="true"
+            android:exported="true"/>
+
+        <activity android:name=".reportActivity" />
+
+        <service
             android:name=".getJob"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".ping"
             android:enabled="true"
